--- a/regressoins_03.ipynb
+++ b/regressoins_03.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b4a938ec-5b46-4d02-86b4-f28949aad302",
    "metadata": {},
@@ -31,19 +32,24 @@
     "$$\n",
     "を最小にする $a,b$ の組が求めたい式と考えてよさそうである\n",
     "\n",
-    "傾き(Slope)と切片(Intercept)を動かして直線と灰色の残差の関係$S_e$をみてみよう"
+    "Jupyter Lab などで実行するとスライダーで直線が変更できる。\n",
+    "傾き(Slope)と切片(Intercept)を動かして直線と灰色の残差の関係$S_e$をみてみよう。\n",
+    "\n",
+    "![liner_reg](./liner_reg.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bed4cfac-d79d-405d-a4d6-6e9e92471f0c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f78b89eef93e40baa9d58006f6895a45",
+       "model_id": "e9f7f3e6c8ed4ad4a8ccf1aed39f07f7",
        "version_major": 2,
        "version_minor": 0
       },
