--- a/regressoins_03.ipynb
+++ b/regressoins_03.ipynb
@@ -35,12 +35,13 @@
     "Jupyter Lab などで実行するとスライダーで直線が変更できる。\n",
     "傾き(Slope)と切片(Intercept)を動かして直線と灰色の残差の関係$S_e$をみてみよう。\n",
     "\n",
+    "[\\[Google Colab で実行\\]](https://colab.research.google.com/github/taki3kb/stat/blob/main/regressoins_03.ipynb)\n",
     "![liner_reg](./liner_reg.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bed4cfac-d79d-405d-a4d6-6e9e92471f0c",
    "metadata": {
     "scrolled": true
@@ -49,7 +50,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9f7f3e6c8ed4ad4a8ccf1aed39f07f7",
+       "model_id": "5929ea5025bf47deaceb19fda0c2444b",
        "version_major": 2,
        "version_minor": 0
       },
