--- a/regressoins_03.ipynb
+++ b/regressoins_03.ipynb
@@ -32,7 +32,7 @@
     "$$\n",
     "を最小にする $a,b$ の組が求めたい式と考えてよさそうである\n",
     "\n",
-    "Jupyter Lab などで実行するとスライダーで直線が変更できる。\n",
+    "Jupyter Lab やGoogle Colab などで実行するとスライダーで直線が変更できる。\n",
     "傾き(Slope)と切片(Intercept)を動かして直線と灰色の残差の関係$S_e$をみてみよう。\n",
     "\n",
     "[\\[Google Colab で実行\\]](https://colab.research.google.com/github/taki3kb/stat/blob/main/regressoins_03.ipynb)\n",
@@ -50,7 +50,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5929ea5025bf47deaceb19fda0c2444b",
+       "model_id": "308aa994a401404f9c89cd41528f2174",
        "version_major": 2,
        "version_minor": 0
       },
